Remove the answer from 06-cascade-fix

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -8,16 +8,16 @@ body {
   font-weight: 800;
 }
 
-.para {
-  font-size: 22px;
-}
-
-p.small-para {
+.small-para {
   font-size: 14px;
   font-weight: 800;
 }
 
-#confirm-button {
+.para {
+  font-size: 22px;
+}
+
+.confirm {
   background: green;
   color: white;
   font-weight: bold;
@@ -29,7 +29,7 @@ p.small-para {
   font-size: 20px;
 }
 
-div.text .text.child {
+.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
