--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -3,6 +3,17 @@ body {
   font-family: sans-serif;
 }
 
+.card,
+.title,
+.button-container {
+  padding: 8px;
+}
+
+.title,
+.content {
+  margin-bottom: 8px;
+}
+
 .card {
   width: 400px;
   background: #fff;
@@ -11,17 +22,24 @@ body {
 
 .title {
   background: #e3f4ff;
+  margin-top: 0;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
 }
 
 button {
+  display: block;
   background: white;
+  padding: 8px 24px;
   border: 1px solid #eee;
+  margin: 0 auto;
 }
